--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>Tetris.js</title>
 </head>
-<body class="bg-gradient">
-    <div class="flex flex-col items-center justify-items-center">
-        <div class="p-1 mt-1 border-solid border border-black items-center justify-items-center">
-            <canvas width="80" height="80" id='preview'></canvas>
-        </div>
-        <div class="inline-flex pt-3">
-            <button id="btn_start" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l">
-              Start
+<body class="flex flex-row items-center bg-gradient">
+    <div class="flex-col">
+        <div class="inline-flex w-full pt-3">
+            <button id="btn_start" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l w-full">
+                Start
             </button>
-            <button id="btn_pause" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-none">
+            <button id="btn_pause" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-none w-full">
                 Pause
             </button>
-            <button id="btn_restart" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r">
-              Restart
+            <button id="btn_restart" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r w-full">
+                Restart
             </button>
-          </div>
-        <div id='AllLinesOut' class="pt-3 pb-3">Score: 0</div>
-        <div id='TetrisDIV' class="border-solid border border-black">
-            <canvas class="tetris-bg-img" width='320' height='640' id='game'></canvas>
         </div>
+        <div class="mt-3 flex-row items-center justify-items-center">
+            <div id='TetrisDIV' class="border-solid border border-black">
+                <canvas class="tetris-bg-img" width='320' height='640' id='game'></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="flex flex-col w-24 h-40 ml-2 p-1 mt-1 border-solid border border-black items-center justify-content-center">
+        <div id='AllLinesOut' class="pt-3 pb-3">Score: 0</div>
+        <div>Preview</div>
+        <canvas width="80" height="80" id='preview'></canvas>
     </div>
     <script src="tetris.js"></script>
 </body>
