--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>Tetris.js</title>
 </head>
-<body class="flex flex-row items-center bg-gradient">
+<body class="flex flex-row content-center bg-gradient">
     <div class="flex-col">
         <div class="inline-flex w-full pt-3">
             <button id="btn_start" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l w-full">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="flex flex-col w-24 h-40 ml-2 p-1 mt-1 border-solid border border-black items-center justify-content-center">
+    <div class="hidden flex flex-col w-24 h-40 ml-2 p-1 mt-1 border-solid border border-black items-center justify-content-center">
         <div id='AllLinesOut' class="pt-3 pb-3">Score: 0</div>
         <div>Preview</div>
         <canvas width="80" height="80" id='preview'></canvas>
