--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Tetris.js</title>
+    <title>Tetris Clone</title>
 </head>
 <body class="flex flex-row content-center bg-gradient md:items-center">
     <div class="flex-col">
